Ensure tree styled rows get hover style
+Add new var to accommodate light theme hover color, previously too close to the tree style color

--- a/styles/vars.scss
+++ b/styles/vars.scss
@@ -332,13 +332,13 @@ body {
     --xh-form-field-box-shadow-color-bottom: var(--form-field-box-shadow-color-bottom, #{mc-trans('blue-grey', '800', 0.2)});
   }
 
-  
+
   //------------------------
   // Slider Handles
   //------------------------
   --xh-slider-handle-focused-box-shadow: var(--slider-handle-focused-box-shadow, #{inset 0 0 0 1px var(--xh-form-field-focused-border-color), 0 0 0 1px var(--xh-form-field-focused-border-color)});
 
-  
+
   //------------------------
   // Grids
   //------------------------
@@ -360,6 +360,7 @@ body {
   --xh-grid-group-text-color: var(--grid-group-text-color, white);
   --xh-grid-total-row-bg: var(--grid-total-row-bg, hsl(207, 87%, 95%));
   --xh-grid-tree-group-bg: var(--grid-tree-group-bg, hsl(207, 87%, 95%));
+  --xh-grid-tree-group-bg-hover: var(--grid-bg-hover, #{mc-trans('blue', '200', .2)});
   --xh-grid-tree-group-border-color: var(--grid-tree-group-border-color, var(--xh-grid-bg-highlight));
   --xh-grid-header-bg: var(--grid-header-bg, var(--xh-blue-gray-light));
   --xh-grid-header-border-color: var(--grid-header-border-color, var(--xh-grid-border-color));
@@ -424,6 +425,7 @@ body {
     --xh-grid-tree-group-bg: var(--grid-tree-group-bg, hsl(201, 48%, 12%));
     --xh-grid-header-bg: var(--grid-header-bg, var(--xh-black));
     --xh-grid-pinned-column-border-color: var(--grid-pinned-column-border-color, #{mc('grey', '800')});
+    --xh-grid-tree-group-bg-hover: var(--grid-bg-hover, #{mc-trans('blue', '200', 0.8)});
   }
 
   // Mobile Grid
